2003-08-01  Markus Germeier  <mager@tzi.de>

	* configure.in: bumped version to 0.7.0
	* today is "release day"! :-)

2003-07-27  Andreas Buesching  <crunchy@tzi.de>

	* mpiosh/callback.c (mpiosh_cmd_cd): checking argument.
		NULL is replaced with "."

2003-07-24  Markus Germeier  <mager@tzi.de>
        * detect new SmartMedia chips and report them
	* added version to mpio_smartmedia_t
	* libmpio/src/smartmedia.c (mpio_id2version): 
	  added function
	* spare area read of new chips should work now
	* bumped version to 0.7.0RC2

2003-07-17  Markus Germeier  <mager@tzi.de>
	* libmpio/src/smartmedia.c (mpio_id2mem): 
	  added non-standard SmartMedia chip ID, as reported by Andreas

2003-07-15  Markus Germeier  <mager@tzi.de>
	* libmpio/src/directory.c (mpio_dentry_get_real): 
	  follow up fix for the broken internal FAT fix
	  added FTYPE_BROKEN
	* libmpio/src/directory.c (mpio_directory_make): 
	  another follow up fix for the broken internal FAT fix
	
2003-07-14  Markus Germeier  <mager@tzi.de>
	* libmpio/src/directory.c (mpio_dentry_get_startcluster): 
	  fixed a bug Yury stumbled across

2003-07-07  Markus Germeier  <mager@tzi.de>
	* libmpio/src/directory.c (mpio_dentry_filename_write): 
	  fixed one of my "famous" 8.3 filename handling "fixes" :-(

2003-07-01  Markus Germeier  <mager@tzi.de>
	* mpiosh/callback.c(mpiosh_ftyp2ascii): added function
	* mpiosh/callback.c(mpiosh_cmd_dir): 
	* libmpio/src/directory.c (mpio_dentry_get_real): 
	  return/display file type/tag for files from internal memory
	  (as requested by Markus)

2003-06-27  Andreas Buesching  <crunchy@tzi.de>

	* mpiosh/callback.c (mpiosh_cmd_backup): using the resolved backup
	directory name as argument for mpio_file_get_as
	(mpiosh_cmd_restore): same as above s/get/put/

	* mpiosh/config.c (mpiosh_config_check_backup_dir): changed return
	type to char *. returning the resolved backip directory name

2003-06-27  Andreas Buesching  <crunchy@tzi.de>
